--- a/app/src/main/res/layout/post_details_fragment_.xml
+++ b/app/src/main/res/layout/post_details_fragment_.xml
@@ -38,9 +38,7 @@
                 android:id="@+id/AvatarIV"
                 android:layout_width="@dimen/posts_avatar_size"
                 android:layout_height="@dimen/posts_avatar_size"
-                android:layout_marginStart="@dimen/element_spacing"
-                android:layout_marginTop="@dimen/element_spacing"
-                android:layout_marginBottom="@dimen/common_spacing"
+                android:layout_margin="@dimen/common_spacing"
                 android:background="@drawable/not_avatar_circle_background"
                 android:contentDescription="@string/desc_avatar_image"
                 app:layout_constraintBottom_toBottomOf="@id/barrier_top"
@@ -53,9 +51,10 @@
                 android:id="@+id/AuthorTV"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/element_spacing"
-                android:layout_marginEnd="@dimen/element_spacing"
+                android:layout_marginStart="@dimen/common_spacing"
+                android:layout_marginEnd="@dimen/common_spacing"
                 android:ellipsize="end"
+                android:paddingBottom="@dimen/element_spacing"
                 android:singleLine="true"
                 android:textSize="@dimen/size_text_title"
                 android:textStyle="bold"
@@ -70,7 +69,8 @@
                 android:id="@+id/NameJobTV"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/element_spacing"
+                android:layout_marginStart="@dimen/common_spacing"
+                android:layout_marginEnd="@dimen/common_spacing"
                 app:layout_constraintBottom_toBottomOf="@id/barrier_top"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/AvatarIV"
@@ -119,9 +119,10 @@
                 android:id="@+id/DatePublicationPostTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/element_spacing"
-                android:layout_marginTop="@dimen/element_spacing"
-                android:layout_marginEnd="@dimen/element_spacing"
+                android:padding="@dimen/common_spacing"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/TextPostTV"
                 app:layout_constraintTop_toBottomOf="@id/AttachmentGroup"
                 tools:text="12.02.21 10:45" />
 
@@ -129,11 +130,8 @@
                 android:id="@+id/TextPostTV"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/element_spacing"
-                android:layout_marginTop="@dimen/common_spacing"
-                android:layout_marginEnd="@dimen/element_spacing"
                 android:autoLink="web"
-                android:padding="@dimen/element_spacing"
+                android:padding="@dimen/common_spacing"
                 app:layout_constraintBottom_toTopOf="@id/TitleLikersTV"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -144,18 +142,19 @@
                 android:id="@+id/TitleLikersTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/element_spacing"
+                android:padding="@dimen/common_spacing"
                 android:text="@string/title_likers"
                 android:textSize="@dimen/size_text_title"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@id/GroupLikersLL"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/TextPostTV" />
 
             <LinearLayout
                 android:id="@+id/GroupLikersLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/element_spacing"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toTopOf="@id/TitleMentionedTV"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -167,8 +166,11 @@
                     style="@style/Widget.AppTheme.LikeButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/element_spacing"
+                    android:backgroundTint="@color/transparent"
                     android:checkable="true"
                     android:contentDescription="@string/desc_icon_like"
+                    android:padding="@dimen/common_spacing"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/barrier_middle"
                     tools:text="10" />
@@ -183,7 +185,7 @@
                 android:id="@+id/TitleMentionedTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/element_spacing"
+                android:padding="@dimen/common_spacing"
                 android:text="@string/title_mentioned"
                 android:textSize="@dimen/size_text_title"
                 android:textStyle="bold"
@@ -196,7 +198,7 @@
                 android:id="@+id/GroupMentionedLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/element_spacing"
+                android:layout_marginBottom="@dimen/element_spacing"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toTopOf="@id/ContainerMap"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -208,7 +210,10 @@
                     style="@style/Widget.AppTheme.LikeButton"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/posts_avatar_size"
+                    android:layout_marginEnd="@dimen/element_spacing"
+                    android:backgroundTint="@color/transparent"
                     android:checkable="true"
+                    android:padding="@dimen/common_spacing"
                     app:icon="@drawable/ic_people_outline_24dp"
                     tools:text="10" />
 
@@ -216,24 +221,28 @@
                     android:id="@+id/list_avatars_mentioned"
                     layout="@layout/avatars_multiple" />
             </LinearLayout>
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/ContainerMap"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/max_size_attachment"
                 android:clickable="true"
                 app:layout_constraintBottom_toTopOf="@id/TitleLinkTV"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/GroupMentionedLL"
-                >
+                app:layout_constraintTop_toBottomOf="@id/GroupMentionedLL">
+
                 <com.yandex.mapkit.mapview.MapView
                     android:id="@+id/GeoPostMW"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/max_size_attachment"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="@dimen/common_spacing"
                     android:visibility="gone"
-                    tools:visibility="visible"
-                    tools:ignore="MissingConstraints" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    tools:visibility="visible" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -241,7 +250,7 @@
                 android:id="@+id/TitleLinkTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/element_spacing"
+                android:padding="@dimen/common_spacing"
                 android:text="@string/title_site"
                 android:textSize="@dimen/size_text_title"
                 android:textStyle="bold"
@@ -255,9 +264,10 @@
                 android:id="@+id/LinkPostTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/element_spacing"
                 android:autoLink="web"
-                android:padding="@dimen/element_spacing"
+                android:paddingStart="@dimen/common_spacing"
+                android:paddingEnd="@dimen/common_spacing"
+                android:paddingBottom="@dimen/common_spacing"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/TitleLinkTV"
                 tools:text="https://03www.ru/" />
